--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="utf-8" />
     <title>Éléments d'interface</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Products</li>
+          <li>About us</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <button class="carre">
+        <p>Button</p>
+      </button>
+      <button class="rond">
+        <p>Button</p>
+      </button>
+      <button class="plus">
+        <p>Button</p>
+      </button>
+      <div class="carte">
+        <img src="img/marinefish.jpg" alt="Un poisson bleu" />
+        <h2>Card title</h2>
+        <h3>Card subtitle</h3>
+        <p>
+          Card content. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor.
+        </p>
+      </div>
+    </main>
   </body>
 </html>
