pas très passionnant

--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
       </nav>
     </header>
     <main>
-      <button class="carre">
-        <p>Button</p>
-      </button>
-      <button class="rond">
-        <p>Button</p>
-      </button>
-      <button class="plus">
-        <p>Button</p>
-      </button>
+      <div class="button">
+        <button class="carre">
+          <p>Button</p>
+        </button>
+        <button class="rond">
+          <p>Button</p>
+        </button>
+        <button class="plus">
+          <p>+</p>
+        </button>
+      </div>
+
       <div class="carte">
         <img src="img/marinefish.jpg" alt="Un poisson bleu" />
         <h2>Card title</h2>
